[package]
name = "ruspiro-lock"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.4.0" # remember to update html_root_url
description = """
Providing Spinlock, Semaphore and mutual exclusive data access for cross core
usage on Raspberry Pi.
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-lock/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-lock/||VERSION||"
readme = "README.md"
keywords = ["RusPiRo", "spinlock", "semaphore", "mutex", "rwlock", "raspberrypi"]
categories = ["no-std", "embedded"]
edition = "2018"
exclude = [".travis.yml", "Makefile.toml"]

[badges]
travis-ci = { repository = "RusPiRo/ruspiro-lock", branch = "master" }
maintenance = { status = "actively-developed" }
is-it-maintained-open-issues = { repository = "RusPiRo/ruspiro-lock" }

[lib]

[dependencies]

[features]
ruspiro_pi3 = []
async_locks = []