[package]
name = "ruspiro-lock"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.4.3" # remember to update html_root_url
description = """
Providing Spinlock, Semaphore and mutual exclusive data access for cross core
usage on Raspberry Pi.
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-lock/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-lock/||VERSION||"
readme = "README.md"
keywords = ["RusPiRo", "spinlock", "semaphore", "mutex", "rwlock"]
categories = ["no-std", "embedded"]
edition = "2018"
exclude = ["Makefile.toml", ".cargo/config.toml"]

[badges]
maintenance = { status = "actively-developed" }

[lib]

[dev-dependencies]
# to run async unit test cases
async-std = { version = "1.7.0", features = ["attributes", "unstable"] }

[dependencies]

[features]
async_locks = []

# ensure the required features of the crate are active for the doc.rs build
[package.metadata.docs.rs]
default-target = "aarch64-unknown-linux-gnu"
features = [
    "async_locks"
]